--- a/superset/templates/superset/basic.html
+++ b/superset/templates/superset/basic.html
@@ -30,7 +30,7 @@
     </title>
     {% block head_meta %}{% endblock %}
     {% block head_css %}
-      <link rel="icon" type="image/png" href="/static/assets/images/favicon.png">
+      <link rel="icon" type="image/png" href="/static/assets/images/guavus.ico">
       <link rel="stylesheet" type="text/css" href="/static/appbuilder/css/flags/flags16.css" />
       <link rel="stylesheet" type="text/css" href="/static/appbuilder/css/font-awesome.min.css">
 
